Fixed SERVER-10010: Leaving maintenance mode crashes mongod

This happens when we weren't in maintenance mode already, and try to
disable maintenance mode (f.e. calling runCommand({replSetMaintenance: false }) multiple times)